# contract

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FILE_MANIFEST.md  Makefile  README.md  TODO.md  code2logic.py  code2logic_integration.py  docker-compose.yml  goal.yaml  index.html  jest.config.js  litellm_config.yaml  package.json  portenv.py  project.functions.toon  project.sh  publish.sh  pyproject.toml  refactoring_report.md  refactoring_spec.yaml  reverse-engineered.rcl.md  run_tests.py  sitecustomize.py  test.tasks  todo.md  todo2.md  tree.sh  tree.txt  tsconfig.json
.github/workflows/: contract-ai.yml  contracts-schema.yml  e2e-tests.yml
articles/: 01-reclapp-overview.md  02-reclapp-dsl-reference.md  03-reclapp-mvp-docker.md  04-reclapp-ai-native-roadmap.md  05-reclapp-typescript-ai-contracts.md  06-reclapp-mcp-integration.md  07-reclapp-causal-verification-loop.md
clickmd/: CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  __init__.py  clickmd.functions.toon  clickmd.toon  decorators.py  devtools.py  help.py  logger.py  progress.py  pyproject.toml  renderer.py  rich_backend.py  themes.py
clickmd/docs/: API.md  CONTRIBUTING.md
clickmd/examples/: api_response.py  basic.py  build_script.py  cli_app.py  cli_colors.py  colored_logging.py  config_viewer.py  custom_renderer.py  logger_usage.py  logging.py  markdown_help.py  one_liners.py  phase1_features.py  phase3_progress.py  phase4_themes.py  phase5_devtools.py  quickstart.py  simple_cli.py
clickmd/examples_output/: api_response.html  api_response.md  basic.html  basic.md  cli_app.html  cli_app.md  cli_colors.html  cli_colors.md  config_viewer.html  config_viewer.md  custom_renderer.html  custom_renderer.md  logger_usage.html  logger_usage.md  logging.html  logging.md  one_liners.html  one_liners.md  quickstart.html  quickstart.md  simple_cli_help.html  simple_cli_help.md  simple_cli_info.html  simple_cli_info.md
clickmd/tests/: __init__.py  test_core.py  test_decorators.py  test_logger.py  test_renderer.py
clickmd/tools/: md_to_html.py  test_examples_md.py
code2logic/: README.md
contracts/: dsl-loader.ts  dsl-types.ts  executor.ts  generate_json.py  index.ts  requirements.txt  summary.py  types.ts  user.py  validator.ts
data/: contractors.json  customers.json  risk-events.json
docker/: Dockerfile.api  Dockerfile.cli  Dockerfile.frontend  README_CLI.md
docs/: 00-architecture-overview.md  20-completion-summary.md  21-testing-guide.md  22-project-status.md  23-llm-configuration.md  30-evolution-system.md  31-code-generation.md  32-contract-markdown.md  33-interchangeable-workflows.md  34-reverse-engineering.md  40-litellm-integration.md  41-litellm-quickstart.md  42-dependency-injection.md  DSL_GENERATION_PROPOSAL.md  README.md  cli-reference.md  contract-ai.md  contract-lifecycle-workflow.md  dsl-reference.md  dsl-typescript-reference.md  generator-architecture.md  studio-guide.md
examples/: .env.examples  .gitignore
frontend/: index.html  package.json
frontend-sdk/: types.ts
generator/: cli.ts  index.ts  package.json  tsconfig.json
lib/: chat-core.js  rcl-utils.js
project/: README.md  analysis.toon  calls.mmd  compact_flow.mmd  context.md  dashboard.html  evolution.toon  flow.mmd  flow.toon  map.toon  project.toon  project.yaml
pycontracts/: __init__.py  base.py  generate.py  generate_json.py  requirements-dev.txt
reclapp/: __init__.py  cli.py  evolve_command.py  generate_command.py
reclapp-contracts/: README.md  pyproject.toml
reclapp-contracts/reclapp_contracts/: __init__.py
reclapp-contracts/reclapp_contracts/models/: definition.py  validation.py
reclapp-contracts/reclapp_contracts/parser/: __init__.py  markdown_parser.py
reclapp-contracts/reclapp_contracts/validation/: __init__.py  pipeline.py  stages.py
reclapp-contracts/tests/: test_reclapp_contracts.py
reclapp-llm/: README.md  pyproject.toml
reclapp-llm/reclapp_llm/: __init__.py  manager.py  ollama.py  openrouter.py  provider.py  together.py  windsurf.py
reclapp-llm/tests/: test_reclapp_llm.py
scripts/: analyze-code.ts  autorun.sh  cleanup_duplicates.sh  compare_engines.py  find_duplicates.py  generate.ts  generate_schemas.py  monitor.sh  portenv.py  stop-examples.sh
setup/: SETUP.md  setup-tasks.json
src/: index.ts  project.functions.toon  project.functions.yaml  project.yaml
src/python/: REFACTORING_PLAN.md  pyproject.toml
src/python/reclapp/: __init__.py
src/python/reclapp/analysis/: __init__.py  code_rag.py  git_analyzer.py
src/python/reclapp/cli/: __init__.py  __main__.py  executor.py  main.py  runner.py
src/python/reclapp/evolution/: __init__.py  evolution_manager.py  generators.py  shell_renderer.py  state_analyzer.py  task_queue.py
src/python/reclapp/generator/: __init__.py  base.py  code_generator.py  contract_generator.py  prompt_builder.py
src/python/reclapp/llm/: __init__.py  anthropic.py  groq.py  litellm.py  manager.py  ollama.py  openai.py  openrouter.py  provider.py  windsurf.py
src/python/reclapp/models/: __init__.py  contract.py  definition.py  validation.py
src/python/reclapp/parser/: __init__.py  markdown_parser.py
src/python/reclapp/sdk/: __init__.py  sdk_generator.py
src/python/reclapp/testing/: __init__.py  api_tester.py  e2e_generator.py
src/python/reclapp/validation/: __init__.py  pipeline.py  stages.py
studio/: .env.example  Dockerfile  app.py  chat-shell.js  contract_validator.py  docker-compose.yml  package.json  reclapp-dsl-evolution-proposal.md  reclapp-studio-docker-implementation.md  requirements.txt  server.js
studio-lite/: chat-shell.js  package.json  server.js
tests/: setup.test.js  setup.ts
todo/: 14-reclapp-llm-code-generation-spec.md  15-reclapp-architecture-summary.md  16-reclapp-implementation-todo-prompts.md  17-reclapp-next-steps-plan.md  README.md  code-corrector.ts  runtime-validator.ts  test-runner.ts
todo1/: 01-reclapp-contract-format-proposal.md  02-reclapp-contract-parser-implementation.md  03-reclapp-quick-start-guide.md  04-reclapp-project-status.md  todo.contract.md
(+429 files in other folders)
