[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reclapp"
version = "2.2.1"
description = "AI-Native Declarative Platform for B2B Applications"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Reclapp Team", email = "team@reclapp.dev"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["ai", "code-generation", "contracts", "b2b", "llm"]
dependencies = [
    "pydantic>=2.5.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
llm = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]
all = [
    "reclapp[dev,llm]",
]

[project.scripts]
reclapp = "reclapp.cli:main"
reclapp-lifecycle = "reclapp.cli:lifecycle"

[project.urls]
Homepage = "https://github.com/wronai/contract"
Documentation = "https://github.com/wronai/contract/docs"
Repository = "https://github.com/wronai/contract"

[tool.setuptools.packages.find]
where = ["."]
include = ["reclapp*", "pycontracts*", "clickmd*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src/python", "."]
asyncio_mode = "auto"
addopts = "-p no:aiohttp"
