[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reclapp"
version = "2.4.2"
description = "Reclapp - AI-Native Declarative Platform for autonomous B2B applications with causal reasoning, 8-stage validation pipeline, and multi-provider LLM orchestration."
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
keywords = ["ai", "code-generation", "contracts", "b2b", "llm"]
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "clickmd>=1.0.0",
    "reclapp-llm>=2.4.1",
    "reclapp-contracts>=2.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "build",
    "twine",
]
all = [
    "reclapp[dev]",
]

[project.scripts]
reclapp = "reclapp.cli:main"
reclapp-lifecycle = "reclapp.cli:lifecycle"

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["reclapp*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src/python", ".", "reclapp-llm", "reclapp-contracts"]
asyncio_mode = "auto"
addopts = "-p no:aiohttp"
python_classes = ["Test*", "!TestType", "!TestDefinition"]
