[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickmd"
version = "1.0.0"
description = "Markdown rendering for CLI applications with syntax highlighting"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Reclapp Team", email = "contact@reclapp.io" }
]
keywords = ["cli", "markdown", "terminal", "ansi", "colors", "syntax-highlighting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
click = ["click>=8.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]
all = ["clickmd[click,dev]"]

[project.urls]
Homepage = "https://github.com/wronai/clickmd"
Documentation = "https://github.com/wronai/clickmd#readme"
Repository = "https://github.com/wronai/clickmd"
Issues = "https://github.com/wronai/clickmd/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
