[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reclapp-contracts"
version = "0.1.0"
description = "Data models and validation for Reclapp Contract AI"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Reclapp Team", email = "team@reclapp.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["reclapp_contracts"]
