[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reclapp-llm"
version = "0.1.0"
description = "Unified LLM provider manager for Reclapp"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Reclapp Team", email = "team@reclapp.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0.0"]
all = ["reclapp-llm[litellm]"]

[tool.hatch.build.targets.wheel]
packages = ["reclapp_llm"]
